--- a/src/main/java/com/diyiliu/gui/MainForm.form
+++ b/src/main/java/com/diyiliu/gui/MainForm.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.diyiliu.gui.MainForm">
-  <grid id="27dc6" binding="plContainer" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="plContainer" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="455" height="363"/>
+      <xy x="20" y="20" width="556" height="399"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -11,7 +11,7 @@
       <grid id="469d9" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="true"/>
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -24,7 +24,7 @@
               <text value="财产金额"/>
             </properties>
           </component>
-          <component id="da251" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="da251" class="javax.swing.JTextField" binding="tfInput">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -35,12 +35,14 @@
         </children>
       </grid>
       <grid id="ddf7" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+        <margin top="10" left="0" bottom="20" right="0"/>
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none"/>
+        <border type="line" title="诉讼争议标的额" title-justification="4">
+          <font/>
+        </border>
         <children>
           <component id="8e640" class="javax.swing.JLabel" binding="fee1">
             <constraints>
@@ -106,25 +108,27 @@
               <text value="＞1亿 (0.5%-1%)"/>
             </properties>
           </component>
-          <component id="19b7b" class="javax.swing.JLabel">
+          <component id="19b7b" class="javax.swing.JLabel" binding="lb1">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value=""/>
+              <text value="2500"/>
             </properties>
           </component>
-          <component id="8354f" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="8354f" class="javax.swing.JTextField" binding="tf1">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="2500"/>
+            </properties>
           </component>
-          <component id="4a06a" class="javax.swing.JLabel">
+          <component id="4a06a" class="javax.swing.JLabel" binding="lb2">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -134,7 +138,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="b411f" class="javax.swing.JLabel">
+          <component id="b411f" class="javax.swing.JLabel" binding="lb3">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -144,7 +148,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="3336c" class="javax.swing.JLabel">
+          <component id="3336c" class="javax.swing.JLabel" binding="lb4">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -154,7 +158,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="1dc84" class="javax.swing.JLabel">
+          <component id="1dc84" class="javax.swing.JLabel" binding="lb5">
             <constraints>
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -164,7 +168,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="ca39a" class="javax.swing.JLabel">
+          <component id="ca39a" class="javax.swing.JLabel" binding="lb6">
             <constraints>
               <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -174,7 +178,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="f3d3e" class="javax.swing.JLabel">
+          <component id="f3d3e" class="javax.swing.JLabel" binding="lb7">
             <constraints>
               <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -184,7 +188,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="a8a15" class="javax.swing.JLabel">
+          <component id="a8a15" class="javax.swing.JLabel" binding="lb8">
             <constraints>
               <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="80" height="-1"/>
@@ -194,61 +198,75 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="547ef" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="547ef" class="javax.swing.JTextField" binding="tf2">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="7"/>
+            </properties>
           </component>
-          <component id="27f6f" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+          <component id="27f6f" class="javax.swing.JTextField" binding="tf3">
             <constraints>
               <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="6"/>
+            </properties>
           </component>
-          <component id="ff875" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+          <component id="ff875" class="javax.swing.JTextField" binding="tf4">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="5"/>
+            </properties>
           </component>
-          <component id="80d0a" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+          <component id="80d0a" class="javax.swing.JTextField" binding="tf5">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="4"/>
+            </properties>
           </component>
-          <component id="453a6" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+          <component id="453a6" class="javax.swing.JTextField" binding="tf6">
             <constraints>
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="3"/>
+            </properties>
           </component>
-          <component id="8bc69" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+          <component id="8bc69" class="javax.swing.JTextField" binding="tf7">
             <constraints>
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="2"/>
+            </properties>
           </component>
-          <component id="46520" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+          <component id="46520" class="javax.swing.JTextField" binding="tf8">
             <constraints>
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="50" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="1"/>
+            </properties>
           </component>
         </children>
       </grid>
@@ -258,6 +276,26 @@
         </constraints>
         <properties>
           <text value="总金额(元):"/>
+        </properties>
+      </component>
+      <component id="26ac9" class="javax.swing.JButton" binding="btCalc">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="计算"/>
+        </properties>
+      </component>
+      <component id="c521a" class="javax.swing.JLabel" binding="money">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="100" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="0"/>
         </properties>
       </component>
     </children>
