修改颜色，清空上次记录。

--- a/src/main/java/com/diyiliu/gui/MainForm.form
+++ b/src/main/java/com/diyiliu/gui/MainForm.form
@@ -295,6 +295,7 @@
           </grid>
         </constraints>
         <properties>
+          <foreground color="-4517809"/>
           <text value="0"/>
         </properties>
       </component>
